<resources>
    <string name="app_name">HistoClin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ingrese_nombre_usuario">Correo del Usuario</string>
    <string name="contrasena_usuario">Contraseña</string>
    <string name="iniciar_sesion">Iniciar</string>
    <string name="datos_incorrectos">Los datos ingresados son incorrectos</string>
    <string name="nombre_paciente_titulo">Nombre Paciente</string>
    <string name="nombre_usuario_titulo">Nombre Usuario</string>
    <string name="registrar_paciente">Registrar Paciente</string>
    <string name="documento_buscar">Documento Paciente</string>
    <string name="documento_paciente">Documento Paciente</string>
    <string name="apeliido_paciente">Apellido Paciente</string>
    <string name="paciente_no_encontrado">No existe un paciente con ese documento</string>
    <string name="ingrese_documentopaciente">Ingrese el documento del paciente</string>
    <string name="ingrese_apellido_paciente">Ingrese el apellido del paciente</string>
    <string name="ingrese_fecha_nacimiento_pacinete">Ingrese la fecha de nacimineto del paciente</string>
    <string name="crear">Crear</string>
    <string name="cancelar">Cancelar</string>
    <string name="ingrese_nombre_paciente">Ingrese el nombre del paciente</string>
    <string name="fecha_nacimineto">Fecha de nacimiento</string>
    <string name="registrar_fecha">Registrar Fecha Nacimiento</string>
    <string name="edad">Edad</string>
    <string name="paciente_ya_existe">Ya existe un paciente con ese documento</string>
    <string name="documento">Documento</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad_titulo">Edad:</string>
    <string name="fecha_nacimineto_titulo">Fecha Nto.:</string>
    <string name="apellido_titulo">Apellido:</string>
    <string name="nombre_titulo">Nombre:</string>
    <string name="documento_titulo">Documento:</string>
    <string name="pregunta_1">Pregunta 1</string>
    <string name="pregunta_2">Pregunta 2</string>
    <string name="pregunta_3">Pregunta 3</string>
    <string name="observaciones">Observaciones</string>
    <string name="guardar">guardar</string>
    <string name="documeto_vacio">El campo de documento no puede ser vacio.</string>
    <string name="nombre_vacio">El campo de nombre no puede ser vacio.</string>
    <string name="apellido_vacio">El campo de apellido no puede ser vacio.</string>
    <string name="fecha_vacia">El campo de fecha de nacimiento no puede ser vacio.</string>
    <string name="verificar_campo">Verifique que los campos no esten vacios</string>
    <string name="repuesta_1">La respuesta a la pregunta 1 no puede estar vacia</string>
    <string name="respuesta_2">La respuesta a la pregunta 2 no puede estar vacia</string>
    <string name="respuesta_3">La respuesta a la pregunta 3 no puede estar vacia</string>
    <string name="observacion_vacia">La observacion no puede estar vacia</string>
    <string name="cerrar_sesion">Salir</string>
    <string name="campos_vacios_login">Por favor llenar los campos</string>
</resources>